# temp

./: CMakeLists.txt  README.md  bastion.tf  data.tf  design.txt  eks.tf  fargate.tf  jenkins-values.yaml  nodegroup.tf  provider.tf  variables.tf
headers/: ACC.hpp  DiagnosticStrategy.hpp  Sensor.hpp  SensorReading.hpp  SpeedSensorDiagStrategy.hpp  SpeedSensorReading.hpp
sample-jenkins-project/: app.js  package-lock.json  package.json
sample-jenkins-project/aws_jenkins/: Jenkinsfile
sample-jenkins-project/docker_jenkins/: Jenkinsfile
src/: ACC.cpp  CMakeLists.txt  SpeedSensorDiagStrategy.cpp  SpeedSensorReading.cpp  main.cpp
testing/: Jenkinsfile  index.html  kaniko-builder.yaml
